--- a/ansible/playbooks/templates/traefik-ha-helmchartconfig.yaml.j2
+++ b/ansible/playbooks/templates/traefik-ha-helmchartconfig.yaml.j2
@@ -21,3 +21,12 @@ spec:
         labelSelector:
           matchLabels:
             app.kubernetes.io/name: traefik
+    ports:
+      web:
+        hostPort: 80
+        expose: true
+      websecure:
+        hostPort: 443
+        expose: true
+    service:
+      type: ClusterIP  # No external LoadBalancer needed with hostPort
